# AaltoAI-Ai-For-Good

./: .gitignore  HACKATHON_PITCH_DECK.md  HACKATHON_PITCH_DECK_V2.md  HACKATHON_PITCH_DECK_V3.md  README.md  plot_measurement_graphs.py  pyproject.toml
.cursor/: mcp.json
agents/: __init__.py  analyzer.py  benchmarker.py  py_tester.py  registry.py  reviewer.py  runner.py  rust_tester.py  scaffolder.py  tester.py  translator.py
benchmark/: __init__.py  artifacts.py  cases.py  cli.py  config.py  inference.py  isolated_env.py  pytest_mining.py  python_wheel.py  report.py  runner.py  scaling.py  suite.py  worker.py
executor_mcp/: __init__.py  api_signatures.py  execute_command.py  paths.py  python_test_quality.py  read_file.py  rust_wheel.py  server.py  venv_context.py  write_file.py
llm/: __init__.py  discovery.py  errors.py  fake.py  openai_client.py  openai_models.py  providers.py  types.py
orchestrator/: __init__.py  activity_log.py  agent_pool.py  app.py  async_workers.py  config.py  controller.py  executor_client.py  migration_executor.py  migration_layout.py  model_select.py  models.py  progress.py  review.py  state.py  step_runner.py  styles.tcss  work_splitter.py  worker_runtime.py  write_context.py
orchestrator/widgets/: __init__.py  pipeline_strip.py
slop/anagram_grouper_measurements/: metadata.json  raw_runs.csv  report.txt  summary.csv
slop/anagram_grouper_migration_py_tests/: migration_plan.md  mypy.ini
slop/anagram_grouper_migration_rust/: pyproject.toml
slop/caesar_cipher_measurements/: metadata.json  raw_runs.csv  report.txt  summary.csv
slop/caesar_cipher_migration_py_tests/: migration_plan.md  mypy.ini
slop/caesar_cipher_migration_rust/: pyproject.toml
slop/manual_sorter_measurements/: metadata.json  raw_runs.csv  report.txt  summary.csv
slop/manual_sorter_migration_py_tests/: migration_plan.md  mypy.ini
tests/: conftest.py  stub_llm.py  test_activity_log.py  test_agent_pool.py  test_agents.py  test_api_signatures.py  test_benchmark.py  test_benchmark_inference.py  test_benchmark_suite.py  test_benchmark_tools.py  test_config.py  test_cursor_bridge_integration.py  test_execute_command.py  test_executor_client.py  test_llm_config.py  test_migration_executor.py  test_migration_layout.py  test_openai_models.py  test_orchestrator_controller.py  test_paths.py  test_progress.py  test_python_test_quality.py  test_read_file.py  test_review.py  test_rust_wheel.py  test_step_runner.py  test_venv_context.py  test_work_splitter.py  test_worker_runtime.py  test_write_file.py
(+171 files in other folders)
