[project]
name = "aalto-migrator"
version = "0.1.0"
description = "Agentic Py2Rust migrator with MCP executor tools"
readme = "README.md"
authors = [
    { name = "Vesa Haaparanta", email = "vesahaaparanta@hotmail.fi" }
]
requires-python = ">=3.10"
    dependencies = [
        "black>=24.0.0",
        "flake8>=7.0.0",
        "matplotlib>=3.8.0",
        "maturin>=1.0.0",
        "mcp[cli]==1.27.1",
        "mypy>=1.8.0",
        "openai>=1.0.0",
        "psutil>=5.9.0",
        "textual>=1.0.0",
        "tomli>=2.0.0; python_version < '3.11'",
    ]

[project.scripts]
executor-mcp = "executor_mcp.server:main"
orchestrator = "orchestrator.app:main"
benchmark-measurements = "benchmark.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
namespace = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live OpenAI API tests (require OPENAI_API_KEY)",
    "cursor_bridge: live Cursor bridge tests (require npx cursor-api-proxy)",
]
